# chat-api

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build-config.toml  build-image.sh  deny.toml  docker-compose.yml  env.example  oauth-test.html  pinned-packages-frontend-builder.txt  pinned-packages-runtime.txt  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-test.yml  build.yml  claude-code-review.yml  claude.yml  codeql.yml  promote.yml  rollback.yml  security-audit.yml  test.yml
crates/api/: Cargo.toml
crates/api/src/: cloud_api.rs  common.rs  consts.rs  error.rs  lib.rs  main.rs  model_pricing.rs  models.rs  openapi.rs  state.rs  static_files.rs  stripe_client_adapter.rs  usage_parsing.rs  validation.rs  web_search_pricing.rs
crates/api/src/middleware/: auth.rs  ip_rate_limit.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs  subscription.rs  tenant.rs  user_rate_limit.rs
crates/api/src/middleware/request_id/: logging_macro_scan.rs  privacy_log_assertions.rs
crates/api/src/routes/: admin.rs  agents.rs  api.rs  attestation.rs  audit.rs  configs.rs  cors.rs  credits.rs  domains.rs  mod.rs  oauth.rs  oauth_server.rs  openclaw.rs  organizations.rs  passkey.rs  projects.rs  referrals.rs  roles.rs  saml.rs  subscriptions.rs  users.rs  workspaces.rs
crates/api/src/tasks/: mod.rs
crates/api/src/websocket/: handler.rs  manager.rs  mod.rs
crates/api/tests/: README.md  admin_tests.rs  agent_e2e_tests.rs  agent_integration_tests.rs  agent_tests.rs  api_key_usage_tests.rs  bi_metrics_tests.rs  common.rs  completions_tests.rs  conversations_tests.rs  credits_tests.rs  e2e_api_tests.rs  email_auth_tests.rs  files_tests.rs  global_config_tests.rs  image_endpoints_test.rs  model_allowlist_tests.rs  model_settings_tests.rs  models_tests.rs  near_balance_tests.rs  oauth_server_tests.rs  openclaw_e2e_tests.rs  openclaw_integration_tests.rs  openclaw_lifecycle_tests.rs  openclaw_tests.rs  passkey_bearer_token_tests.rs  passkey_instance_tests.rs  proxy_path_tests.rs  rate_limit_tests.rs  request_id_contract_proxy_tests.rs  request_id_contract_tests.rs  response_author_tests.rs  responses_permissions_tests.rs  subscriptions_tests.rs  system_configs_tests.rs  system_settings_tests.rs  upgrade_check_tests.rs  usage_tests.rs  user_account_deletion_tests.rs  user_ban_tests.rs  (+3 more)
crates/api/tests/request_id_contract/: support.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: cluster_manager.rs  encryption.rs  lib.rs  patroni_discovery.rs  pool.rs
crates/database/src/repositories/: agent_repository.rs  mod.rs  (+35 more)
crates/services/: Cargo.toml
crates/services/src/: consts.rs  lib.rs  types.rs
crates/services/src/agent/: age_derivation.rs  mod.rs  ports.rs  proxy.rs  service.rs
crates/services/src/analytics/: mod.rs  ports.rs
crates/services/src/audit/: mod.rs  ports.rs  service.rs
crates/services/src/auth/: mod.rs  near.rs  oauth_ports.rs  oauth_server_service.rs  passkey.rs  passkey_service.rs  pkce.rs  ports.rs  scopes.rs  service.rs  tokens.rs  webauthn.rs
crates/services/src/bi_metrics/: mod.rs  ports.rs  service.rs
crates/services/src/conversation/: mod.rs  ports.rs  service.rs  share_service.rs
crates/services/src/domain/: mod.rs  ports.rs  service.rs
crates/services/src/file/: ports.rs  service.rs
crates/services/src/global_config/: ports.rs  service.rs
crates/services/src/globals/: ports.rs  service.rs
crates/services/src/jobs/: mod.rs
crates/services/src/metrics/: capturing.rs  consts.rs  mod.rs
crates/services/src/model/: ports.rs  service.rs
crates/services/src/openclaw/: mod.rs  ports.rs  proxy.rs  service.rs
crates/services/src/organization/: mod.rs  ports.rs  service.rs
crates/services/src/rbac/: mod.rs  ports.rs  service.rs
crates/services/src/referral/: mod.rs  ports.rs  service.rs
crates/services/src/response/: ports.rs  service.rs
crates/services/src/saml/: mod.rs  ports.rs  service.rs
crates/services/src/settings/: ports.rs  service.rs
crates/services/src/subscription/: mod.rs  near_staking.rs  ports.rs  service.rs
crates/services/src/system_configs/: ports.rs  service.rs
crates/services/src/system_settings/: mod.rs  ports.rs  service.rs
crates/services/src/tasks/: mod.rs
crates/services/src/user/: mod.rs  ports.rs  service.rs  user_settings_service.rs
crates/services/src/user_usage/: mod.rs  ports.rs  service.rs
crates/services/src/vpc/: ports.rs  service.rs
crates/services/src/workspace/: mod.rs  ports.rs  service.rs
crates/stripe_client/: Cargo.toml
crates/stripe_client/src/: client.rs  error.rs  lib.rs  types.rs  webhook.rs
false/config-2c6n2qgn79a71/s-hg6puxx1ra-1mope72-5ti1xcqgssdnt8a5qjlh1cpgz/: metadata.rmeta
false/config-2ghgi8fcoq6gu/s-hg87mwgrxw-1yszfv4-3xqteisjxt30uitm7l735y32h/: metadata.rmeta
false/config-2u0uehwms60h3/s-hg6pvj2at4-0j4i3rb-1k2bprhl88g81nooa6gh1xhth/: metadata.rmeta
false/config-3iq3pyrhnao9i/s-hg6hj80uo0-0etmj3p-ckx0qc1b3obqo0fbfqz30unu0/: metadata.rmeta
false/database-0a7kapyix63rk/s-hg6hk80btc-10gunv2-76hb31m6zf71fm0ileeqsyjgg/: metadata.rmeta
false/database-0pryt3hy0r24x/s-hg71b8ktrv-05c079y-5cqttyrbmez173g6xbmd7x74w/: metadata.rmeta
false/database-2t32abasyqeuk/s-hg7k09w4ja-0wjj4m5-6afqroc9ra36bog3perwsz697/: metadata.rmeta
false/database-3aif30ryx4ufl/s-hg87n0n2ih-0q4izes-90w09z1jlkjzx7d4ixlpooxqr/: metadata.rmeta
frontend/: index.html  manifest.webmanifest  sw.js  sw.js.map  workbox-584b7aee.js  workbox-584b7aee.js.map
frontend/assets/: core-CQQ2fP86.js  core-CQQ2fP86.js.map  event-BiMQy2fy.js  event-BiMQy2fy.js.map  index-Cpzy33o5.js  index-Cpzy33o5.js.map  index-CtKbGG2S.css  index-CvOOtZBg.js  index-D5J5kflh.js  index-D5J5kflh.js.map  sshKeyGenerator-C9zLHSf5.js  sshKeyGenerator-C9zLHSf5.js.map  translation-BGDyc9TP.js  translation-BGDyc9TP.js.map  workbox-window.prod.es5-BIl4cyR9.js.map
scripts/: build-frontend.sh  build-image.sh  create-test-oauth-client.sql  pinned-packages-backend-builder.txt
(+63 files in other folders)
