[package]
name = "api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
dstack-sdk = "0.1.2"

# Authentication dependencies
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1.5", features = ["v4"] }
url = "2.5"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
bytes = "1.5"
http = "1.0"
flate2 = "1.0"
# For TypedHeader support
headers = "0.4"
# OpenAPI documentation generation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Static file serving
mime_guess = "2"

# Internal dependencies
services = { path = "../services", features = ["utoipa"] }
database = { path = "../database" }
config = { path = "../config" }
hex = "0.4.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
axum-test = "18"
dotenvy = "0.15"

[features]
default = []
test = []
