[package]
name = "services"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1"
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
futures = "0.3"
futures-util = "0.3"
thiserror = "2.0"
config = { path = "../config" }
rand = "0.9"
# OAuth2 authentication
oauth2 = { version = "5", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"
bytes = "1.5"
http = "1.0"
tokio-stream = "0.1"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
# MCP protocol
rmcp = { version = "0.6", features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "transport-sse-client-reqwest",
] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
dstack-sdk = "0.1"
# OpenTelemetry for metrics
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
utoipa = { version = "5", optional = true }
near-api = "0.8.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
ecdsa = { version = "0.16", features = ["pkcs8"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
ciborium = { version = "0.2" }

[features]
utoipa = ["dep:utoipa"]

[dev-dependencies]
tokio-test = "0.4"
async-trait = "0.1"
futures = "0.3"
